css/style.scss
/* ... */
#search_section > form > fieldset > label > img {
    height: 1.20em;
    padding: 0.1em;
}

#search_section > form > fieldset > label:not(:first-of-type) {
    max-width: 30%;
    min-width: 30%;
}

#search_section > form > fieldset > input {
    box-sizing: border-box;
}

#search_section > form > fieldset > input[type=text] {
    background: transparent;
    margin-left: -10%;
    height: 2.1em;
    border-radius: 2.1em;
    box-shadow: $boxShadows;
    border: 0.1em solid $formText; 
    padding-left: 10%;
    padding-right: 2%;
}

#general_search > input[type=text] {
    width: 80%;
    margin-bottom: 0;
    box-sizing: border-box;
}

#specific_search > input[type=text] {
    width: 100%;
}

#search_section > form > fieldset > input:not(:last-child):not([type=text]), #search_section > form > fieldset > select {
    max-width: 70%;
    min-width: 70%;
    margin: 2% 0;
}

#search_section > form > fieldset > input[type=date], #search_section > form > fieldset > select {
    border: 0.1em solid $formText;
    border-radius: 2em;
    height: 2em;
    padding: 0 0.3em;
}

#search_section > form > fieldset:not(:first-of-type) {
    border-top: 0;
    padding: 0;
    margin: 0;
}

#filters_button {
    border-radius: 1.5em;
    border: thin solid $formText;
    height: 1.7em;
    background: $sectionBackground;
    box-shadow: 1px 1px 1px rgba($boxShadows, 0.7);
    width: 18%;
    min-width: 18%;
    margin-left: 2%;
    color: $formText;
    cursor: pointer;
    box-sizing: border-box;
    font-size: 1em;
}

/* purchase section */
#purchase_section > table {
    text-align: center;
    width: 100%;
    display: block;
    margin-top: 1em;
}

#purchase_section > table > tr > * {
    width: 33%;
}

#purchase_section > table > tr:nth-child(odd) > th:nth-child(n+4) {
    display: none;
}

#purchase_section > table > tr > * {
    display: inline-block;
}

#purchase_section > table > tr:nth-child(even) > td:nth-child(n+4) {
    padding: 0.5em 5% 2em 5%;
    width: 40%;
}

#purchase_section > table > tr:nth-child(even) > td:nth-child(n+4) > * {
    width: 100%;
}

#purchase_section > table > tr:nth-child(even) > td:nth-child(n+4) > a {
    background-color: $mainRed;
    box-shadow: 3px 3px 3px rgba($boxShadows, 0.7);
    border-radius: 5px;
    box-sizing: border-box;
    display: block;
}

#purchase_section > table > tr:nth-child(even) > td:nth-child(n+4) > a > img {
    max-height: 100%;
    width: 15%;
    cursor: pointer;
}

#purchase_section > table > tr:nth-child(even) > td:last-child > * {
    padding-top: 0.2em;
}

/* cart */
#cart_payment_section > section {
    text-align: center;
    margin-bottom: 7%;
}

#cart_payment_section > section > section {
    margin-bottom: 1em;
    text-align: left;
}

#cart_payment_section > section > p {
    text-align: center;
    font-size: 200%;
    font-weight: bold;
    margin-bottom: 0.5em;
}

#cart_payment_section > section > section > h1 {
    text-align: center;
    margin-bottom: 0.5em;
}

#cart_payment_section > section > section > p {
    padding-left: 1em;
}

#cart_payment_section > footer {
    text-align: center;
    font-size: 70%;
}

#payment_types > ul {
    list-style-type: none;
}

#payment_types > ul > li {
    display: inline-block;
    width: 19%;
    cursor: pointer;
    padding-bottom: 0.75em;
}

#payment_types > ul > li:not(:last-child) {
    margin-right: 1%;
}

#payment_types > ul > li.selected {
    padding-bottom: 0.5em;
    border-bottom: 0.25em solid $mainRed;
}

#payment_types > ul > li > img {
    width: 100%;
}

#tickets {
    background: transparent;
    margin: 0;
    padding: 0;
    width: 100%;
    box-shadow: 0 0 0;
}

section.event_tickets > section {
    text-align: center;
}

section.event_tickets > section > * {
    display: inline-block;
    vertical-align: middle;
}

section.event_tickets > section > a {
    padding: 0 5%;
    width: 11%;
}

section.event_tickets > section > a > img {
    width: 100%;
    padding: 15%;
    display: inline-block;
}

section.event_tickets > section > p:first-of-type, section.event_tickets > section > p:last-of-type {
    display: block;
    margin-bottom: 0.5em;
    font-size: 150%;
}

section.event_tickets > section > p:last-of-type {
    margin-top: 0.5em;
}

section.event_tickets > footer {
    text-align: right;
    margin: 0;
    width: 100%;
}

/* user area menu */
#user_area_menu {
    padding: 0;
    background-color: $mainRed;
    color: $sectionBackground;
    width: 90%;
    margin-bottom: 2.5em;
    border: 0.1em solid $sectionShadow;
}

#user_area_menu > a {
    display: inline-block;
    width: 100%;
    text-align: center;
    padding-top: 0.1em;
}

#user_area_menu > a > img {
    max-height: 2.5em;
}

#user_area_menu > ul {
    list-style-type: none;
}

#user_area_menu > ul > li {
    width: 80%;
    padding-left: 10%;
    padding-bottom: 0.5em;
    margin: 0.5em 10% 0 0;
    height: 1.5em;
    cursor: pointer;
}

#user_area_menu > ul > li:not(:last-of-type) {
    border-bottom: 0.1em solid $sectionBackground;
}

/* user area notifications */
.notification {
    text-align: center;
}

.notification > a {
    display: block;
    width: min-content;
    margin: auto;
    margin-top: 1em;
}

.notification > label {
    margin-right: 1em;
}

.notification > input[type=checkbox] {
    vertical-align: middle;
}

.notification > p {
    margin-bottom: 1em;
}

.notification.visualized {
    background-color: darken($sectionBackground, 15%);
}

.notification.visualized > a {
    background-color: $mainText;
}

#admin_message_section > p {
    margin-bottom: 1em;
}

